FIXED THE ALIGNMENTS

--- a/style.css
+++ b/style.css
@@ -5,11 +5,10 @@
   font-family: 'poppins', 'sans-serif'; 
 }
 
-
 body{
   background: #000;
   overflow: hidden;
-  height: 100%;
+  height: 200%;
 }
 
 i{
@@ -34,19 +33,23 @@ i{
 }
 
 .container{
+  position: fixed;
   color: rgb(255,255,255);
   font-size: 1.7vw;
   text-align: center;
+  top: 93%;
+  left: 41%;
+  transform: translate(-50%, -50%);
 }
 
 .launch-time {
   display: flex;
   margin-left: auto;
   margin-right: auto;
-  width: 35%;
+  width: 200%;
 }
 .launch-time div{
-  flex-basis: 30%;
+  flex-basis: 150%;
 }
 
 .launch-time div p{
